@@ -126,6 +126,15 @@ AC_ARG_ENABLE(profile, AS_HELP_STRING([--enable-profile],[Turn on profiling]),
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-profile) ;;
 esac],[AC_MSG_RESULT([no])])
 
+AC_MSG_CHECKING([whether command-line arguments are enabled])
+AC_ARG_ENABLE(command-line, AS_HELP_STRING([--enable-command-line],[Turn on command-line arguments]),
+[case "${enableval}" in
+ yes)  AC_DEFINE(COMMAND_LINE,1,[Define to 1 if you want to enable command-line arguments])
+       AC_MSG_RESULT([yes]);;	
+ no)   AC_MSG_RESULT([no]);;
+ *) AC_MSG_ERROR(bad value ${enableval} for --enable-command-line) ;;
+esac],[AC_MSG_RESULT([no])])
+
 # should we run the tests
 AC_MSG_CHECKING([whether we should run the tests])
 AC_ARG_ENABLE(tests, AS_HELP_STRING([--enable-tests],[Run short tests]),
