@@ -1,3 +1,9 @@
+2006-09-20 Ian Rutt
+ * Added feature so that config file data is automatically added to output
+ netcdf files as attribute.
+ * Added utility nc2config that extracts this attribute and outputs it as
+ plain text.
+
 2006-09-15 Ian Rutt
  * Reorganisation and extension of restart-on-demand code
  * Added glimmer_restart_statscal.F90, which deals with static scalar
